syntax = "proto3";
option java_multiple_files = true;

package com.devProblems;

import "google/protobuf/timestamp.proto";
enum ReservationStatus {
  RESERVATION_STATUS_PENDING = 0;
  RESERVATION_STATUS_ACCEPTED = 1;
  RESERVATION_STATUS_DECLINED = 2;
  RESERVATION_STATUS_DELETED = 3;
  RESERVATION_STATUS_CANCELED=4;
}

message ReservationReq{
  string start_date = 1;
  string end_date = 2;
  int32 numberOfGuests=3;
  int32 accommodation_id=4;
}
message ReservationResp{
  string start_date = 1;
  string end_date = 2;
  int32 numberOfGuests=3;
  int32 accommodation_id=4;
  ReservationStatus status=5;
}
message isAvailable{
  bool available=1;
}
message ListOfReservationResp{
  repeated ReservationResp reservations=1;
}
message UpdateReq{
  string start_date = 1;
  string end_date = 2;
  int32 numberOfGuests=3;
  int32 accommodation_id=4;
  ReservationStatus status=5;
  int32 id=6;
}
message Delete{
  int64 id=1;
}
message Cancel{
  int64 id=1;
  int64 userId=2;
}


service ReservationService {
  rpc CreateReservation(ReservationReq) returns (ReservationResp);
  rpc UpdateReservation(UpdateReq) returns (ReservationResp);
  rpc CheckAvailability(ReservationReq) returns (isAvailable);
  rpc GetAllReservations(ListOfReservationResp) returns(ListOfReservationResp);
  rpc DeleteReservation(Delete) returns(isAvailable);
  rpc CancelReservation(Cancel) returns(isAvailable);

}